Use private lock for DSL plugin registry